ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-python-app-service
spec:
  selector:
    app: sample-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30007
  type: NodePort
