ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: sample-python-app-service
            port:
              number: 80
